Fix and tweak spacing between back buttons and top bar text

--- a/game/styles/styles.css
+++ b/game/styles/styles.css
@@ -90,7 +90,7 @@ button {
 	.top-bar button {
 		width: 3.5rem;
 		height: 3.5rem;
-		margin: -1.1rem 1rem;
+		margin: -1.1rem 0.875rem;
 		vertical-align: top;
 		
 		border-radius: 0;
@@ -195,7 +195,7 @@ button {
 		.top-bar button {
 			width: 4rem;
 			height: 4rem;
-			margin: -1.25rem 0.75rem;
+			margin: -1.25rem 1.325rem;
 			background-size: 12rem 4rem;
 		}
 			.top-bar button:hover,
